update leaf async mob spawning